modificaciones para que se adapte al proyecto

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,24 +17,10 @@
         android:checked="true"
         android:text="Code128" />
 
-    <Spinner
-        android:id="@+id/spinnerScannerDevices"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/checkBoxEAN13" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/spinnerScannerDevices"
-        android:text="Select Scanner:" />
-
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/buttonStopScan"
         android:layout_below="@+id/textView3" >
 
         <LinearLayout
@@ -60,22 +46,22 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewStatus"
         android:layout_below="@+id/textViewStatus"
-        android:text="Data:" />
+        android:text="Datos:" />
 
-    <Spinner
+    <!--<Spinner
         android:id="@+id/spinnerTriggers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/spinnerScannerDevices"
-        android:layout_alignTop="@+id/textView4" />
+        android:layout_alignTop="@+id/textView4" />-->
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/spinnerScannerDevices"
-        android:text="Select Trigger Type:" />
+        android:text="Select Trigger Type:" />-->
 
     <CheckBox
         android:id="@+id/checkBoxEAN13"
@@ -86,14 +72,6 @@
         android:layout_marginRight="50dp"
         android:checked="true"
         android:text="EAN13" />
-
-    <CheckBox
-        android:id="@+id/checkBoxContinuous"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_alignLeft="@+id/textView2"
-        android:text="Continuo" />
 
     <CheckBox
         android:id="@+id/checkBoxCode39"
@@ -109,24 +87,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/checkBoxContinuous"
-        android:layout_below="@+id/buttonStartScan"
+        android:layout_below="@+id/checkBoxCode39"
         android:text="Status:" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/spinnerScannerDevices"
         android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/spinnerTriggers"
-        android:text="Set Decoders:" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/checkBoxContinuous"
-        android:layout_below="@+id/checkBoxCode39"
-        android:text="Scan:" />
+        android:text="Decoders:" />
 
     <CheckBox
         android:id="@+id/checkBoxEAN8"
@@ -137,13 +107,14 @@
         android:checked="true"
         android:text="EAN8" />
 
-    <Button
+    <!--<Button
         android:id="@+id/buttonStartScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/checkBoxCode128"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@+id/textView4"
+        android:layout_marginLeft="31dp"
+        android:layout_marginTop="9dp"
+        android:layout_toRightOf="@+id/checkBoxContinuous"
         android:text="Start" />
 
     <Button
@@ -151,7 +122,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/checkBoxCode128"
+        android:layout_marginLeft="53dp"
+        android:layout_marginTop="8dp"
         android:layout_toRightOf="@+id/buttonStartScan"
-        android:text="Stop" />
+        android:text="Stop" />-->
 
 </RelativeLayout>
